test/corpus/attached_modifiers.txt
================================================================================
Standalone markup
================================================================================
*bold*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold))))

================================================================================
Bold modifier
================================================================================
Here is a *bold* word.
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold))))

================================================================================
Verbatim
================================================================================
Here is a `verbatim` word.
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (verbatim))))

================================================================================
Nesting into Bold
================================================================================
*Bold and /italic/*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (italic)))))
================================================================================
No nested markup inside verbatim
================================================================================
`*not bold*`
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (verbatim))))

================================================================================
Verbatim precedence
================================================================================
*not bold `because verbatim* has higher precedence`
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (verbatim))))

================================================================================
First closing modifier has precedence
================================================================================
*first bold* some /italic/ and not bold*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold)
      (italic))))

================================================================================
Not Bold
================================================================================
asdf*asdf* asdf
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment)))

================================================================================
Link Modifier
================================================================================
Intra:*word*:bold
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (link_modifier)
      (bold)
      (link_modifier))))

================================================================================
Link modifiers with surrounding whitespace
================================================================================
:*text*:
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold))))

================================================================================
Escaped Markup
================================================================================
This is not \*bold\*
This is not \/italic\/
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (escape_sequence)
      (escape_sequence))
    (paragraph_segment
      (escape_sequence)
      (escape_sequence))))

================================================================================
Free form Bold
================================================================================
Here is some *|free form bold|* markup.
Here is some *| free form bold|* markup.
Here is some *|free form bold |* markup.
Here is some *| free form bold |* markup.
Here is some *| free form
bold |* markup.
*| Extend as *far* as possible |*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))))

================================================================================
Deep Nesting
================================================================================
*|Bold /italic `verbatim`/|*
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (italic
          (verbatim))
        (free_form_close)))))

================================================================================
Unclosed free form markup
================================================================================
*| test one

/| test two

(the spacing is deliberate)
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment))
  (paragraph
    (paragraph_segment))
  (paragraph
    (paragraph_segment)))

================================================================================
Closing free form modifier delimiter without surrounding attached modifier
================================================================================
*|some|text|*
/|*some|* text |/
--------------------------------------------------------------------------------

(document
  (paragraph
    (paragraph_segment
      (bold
        (free_form_open)
        (free_form_close)))
    (paragraph_segment
      (italic
        (free_form_open)
        (bold)
        (free_form_close)))))
